stage 3 completed